Speakers Grid Minor Changes

--- a/index.html
+++ b/index.html
@@ -164,16 +164,16 @@
 
             <div class="img-grid">
               <div class="row">
-                <div class="col-sm-4">
+                <div class="col-md-4 col-12">
                   <div class="img-grid__container img-grid__container--left">
                     <img src="img/speakers.jpg" class="img-grid__image" />
                     <h3 class="img-grid__text img-grid__text-1">
-                      <!-- <span class="img-grid__text--main">Coming Soon</span>
-                      <span class="img-grid__text--sub">Coming Soon</span> -->
+                      <span class="img-grid__text--main">Coming Soon</span>
+                      <span class="img-grid__text--sub">Coming Soon</span>
                     </h3>
                   </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4 col-12">
                   <div class="img-grid__container img-grid__container--center">
                     <img
                       src="img/speakers.jpg"
@@ -181,12 +181,12 @@
                       class="img-grid__image"
                     />
                     <h3 class="img-grid__text img-grid__text-2">
-                      <!-- <span class="img-grid__text--main">Coming Soon</span>
-                      <span  class="img-grid__text--sub">Coming Soon</span> -->
+                      <span class="img-grid__text--main">Coming Soon</span>
+                      <span  class="img-grid__text--sub">Coming Soon</span>
                     </h3>
                   </div>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-md-4 col-12">
                   <div class="img-grid__container img-grid__container--right">
                     <img
                       src="img/speakers.jpg"
@@ -194,8 +194,8 @@
                       class="img-grid__image"
                     />
                     <h3 class="img-grid__text img-grid__text-3">
-                      <!-- <span class="img-grid__text--main">Coming Soon</span>
-                      <span class="img-grid__text--sub">Coming Soon</span> -->
+                      <span class="img-grid__text--main">Coming Soon</span>
+                      <span class="img-grid__text--sub">Coming Soon</span>
                     </h3>
                   </div>
                 </div>
