Nav Menu Responsive

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
             <img src="img/Logo-techie.png" alt="logo" class="nav__logo" />
           </a>
         </div>
+        <div class="nav__icons">
+          <div class="nav__icons-container">
+            <img src="./img/icons/menu.svg" alt="hamburger menu" class="menu-icon menu-active">
+            <img src="./img/icons/close.svg" alt="close menu" class="close-icon">
+          </div>
+        </div>
         <ul class="nav__list">
           <li class="nav__item"><a href="#about">About</a></li>
           <li class="nav__item"><a href="#speakers">Speakers</a></li>
