--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="row">
               <div class="col-12 col-sm-12">
                 <h2
-                  class="heading-secondary u-margin-bottom-large u-text-align-right"
+                  class="heading-secondary u-margin-bottom-large"
                 >
                   <span class="heading-secondary--main">Meet the speakers</span>
                   <span class="heading-secondary--sub"
