--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <section id="rewind" class="rewind">
           <div class="container">
             <div class="row">
-              <div class="col-6">
+              <div class="col-12 col-md-6">
                 <div class="rewind__text-container">
                   <h2 class="heading-secondary u-margin-bottom-medium">
                     Rewind hack 20
