Why Sponsor Section Responsive

--- a/index.html
+++ b/index.html
@@ -445,98 +445,104 @@
 
         <section id="why-table" class="why-table">
           <div class="container">
-            <h1 class="heading-secondary">Why Sponsor <span>Us?</span></h1>
-            <table>
-              <tr>
-                <th>Sponsorship Benefits</th>
-                <th>Diamond <br />70k-1 lakh $1000</th>
-                <th>Platinum <br />40k-50k <br />$700</th>
-                <th>Gold <br />20k-30k <br />$400</th>
-              </tr>
-              <tr>
-                <td>Logo with T-Shirt</td>
-                <td><img src="./img/tick.png" /></td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <td>View Access to all solutions</td>
-                <td><img src="./img/tick.png" /></td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <td>Idea/Product Coverage and Promotion</td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <td>Name/Logo attached with Title</td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <td>Student Marketing</td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-                <td>&nbsp;</td>
-              </tr>
-              <tr>
-                <td>Logo in ID Card</td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-              </tr>
-              <tr>
-                <td>Recognition at opening and closing ceremony</td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-              </tr>
-              <tr>
-                <td>
-                  Exclusive talk/seminar interaction with the participants
-                </td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-              </tr>
-              <tr>
-                <td>Hire and offer internship</td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-              </tr>
-              <tr>
-                <td>Opportunity to sponsor title prizes</td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-              </tr>
-              <tr>
-                <td>Opportunity to provide judges for the hackathon</td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-              </tr>
-              <tr>
-                <td>Opportunity to provide APIs</td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-              </tr>
-              <tr>
-                <td>
-                  Website, Brochure and Poster Publicity with social media
-                  mentions
-                </td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-                <td><img src="./img/tick.png" /></td>
-              </tr>
-            </table>
+            <div class="row">
+              <div class="col-12 col-md-3 align-self-end">
+                <h1 class="heading-secondary">Why Sponsor <span>Us?</span></h1>
+              </div>
+              <div class="col-12 offset-md-1 col-md-8" style="overflow-x: auto;">
+                <table>
+                  <tr>
+                    <th>Sponsorship Benefits</th>
+                    <th>Diamond <br />70k-1 lakh $1000</th>
+                    <th>Platinum <br />40k-50k <br />$700</th>
+                    <th>Gold <br />20k-30k <br />$400</th>
+                  </tr>
+                  <tr>
+                    <td>Logo with T-Shirt</td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                  </tr>
+                  <tr>
+                    <td>View Access to all solutions</td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td>&nbsp;</td>
+                    <td>&nbsp;</td>
+                  </tr>
+                  <tr>
+                    <td>Idea/Product Coverage and Promotion</td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td>&nbsp;</td>
+                  </tr>
+                  <tr>
+                    <td>Name/Logo attached with Title</td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td>&nbsp;</td>
+                  </tr>
+                  <tr>
+                    <td>Student Marketing</td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td>&nbsp;</td>
+                  </tr>
+                  <tr>
+                    <td>Logo in ID Card</td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                  </tr>
+                  <tr>
+                    <td>Recognition at opening and closing ceremony</td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      Exclusive talk/seminar interaction with the participants
+                    </td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                  </tr>
+                  <tr>
+                    <td>Hire and offer internship</td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                  </tr>
+                  <tr>
+                    <td>Opportunity to sponsor title prizes</td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                  </tr>
+                  <tr>
+                    <td>Opportunity to provide judges for the hackathon</td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                  </tr>
+                  <tr>
+                    <td>Opportunity to provide APIs</td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                  </tr>
+                  <tr>
+                    <td>
+                      Website, Brochure and Poster Publicity with social media
+                      mentions
+                    </td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                    <td><img src="./img/tick.png" /></td>
+                  </tr>
+                </table>
+              </div>
+            </div>
           </div>
         </section>
 
