--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                 class="heading-secondary u-margin-bottom-large"
                 style="text-align: center"
               >
-                thanks to our 2020 sponsors!
+                thanks to our <span>2020</span> sponsors!
               </h5>
 
               <div class="row" style="text-align: center">
