Testimonial Section Responsive

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
         <section id="testimonial" class="testimonial">
           <div class="container">
             <div class="row">
-              <div class="col-6">
+              <div class="col-12 col-md-6">
                 <div class="testimonial__container">
                   <p class="testimonial__quote">
                     “.hack(); was my first ever hackathon and it helped me get
@@ -344,7 +344,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-12 col-md-6">
                 <div class="testimonial__container">
                   <p class="testimonial__quote">
                     “I had participated in multiple other hackathons before, and
@@ -363,7 +363,7 @@
             </div>
 
             <div class="row">
-              <div class="col-6">
+              <div class="col-12 col-md-6">
                 <div class="testimonial__container">
                   <p class="testimonial__quote">
                     “Before this, I had a common misconception that a hackathon
@@ -379,7 +379,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-6">
+              <div class="col-12 col-md-6">
                 <div class="testimonial__container">
                   <p class="testimonial__quote">
                     “My team and I had a lot of fun developing our prototype and
