Added Sponsors Page

--- a/index.html
+++ b/index.html
@@ -408,7 +408,8 @@
                 class="heading-secondary"
                 style="text-align: center; margin-bottom: 5rem"
               >
-                our sponsors
+                <span class="heading-secondary--main">our sponsors</span>
+                <!-- <span class="heading-secondary--sub">#boost is the secret of my energy ok this is not funnny</span> -->
               </h5>
               <div class="row" style="text-align: center">
                 <a
@@ -439,11 +440,12 @@
                     alt=""
                 /></a>
               </div>
+              <a class="btn btn--large btn--ring" href="/sponsor.html" >Why Sponsor Us?</a>
             </div>
           </div>
         </section>
 
-        <section id="why-table" class="why-table">
+        <!-- <section id="why-table" class="why-table">
           <div class="container">
             <div class="row">
               <div class="col-12 col-md-3 align-self-end">
@@ -544,7 +546,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
 
         <section id="sponsors" class="sponsors sponsors-prev">
           <div class="container">
