Coming Soon Header

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
             </span>
           </h1>
           <div class="header__btn-box">
-            <!-- Bubble button -->
-            <a href="#" class="btn btn--large btn--ring">coming soon</a>
+            <!-- <a href="#" class="btn btn--large btn--ring">coming soon</a>
             <a href="#" class="btn btn--large btn--ring btn--anim"
               >coming soon</a
-            >
+            > -->
+            <h2 class="heading-primary--sub">Coming Soon..</h2>
           </div>
         </div>
       </header>
