--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               </div>
             </div>
           </div>
-          <div class="about__bg">&nbsp;</div>
+          <!-- <div class="about__bg">&nbsp;</div> -->
         </section>
 
         <section id="speakers" class="speakers">
