--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                   <div class="img-grid__container img-grid__container--left">
                     <img src="img/speakers.jpg" class="img-grid__image" />
                     <h3 class="img-grid__text img-grid__text-1">
-                      <span class="img-grid__text--main">Coming Soon</span>
-                      <span class="img-grid__text--sub">Coming Soon</span>
+                      <!-- <span class="img-grid__text--main">Coming Soon</span>
+                      <span class="img-grid__text--sub">Coming Soon</span> -->
                     </h3>
                   </div>
                 </div>
@@ -187,8 +187,8 @@
                       class="img-grid__image"
                     />
                     <h3 class="img-grid__text img-grid__text-2">
-                      <span class="img-grid__text--main">Coming Soon</span>
-                      <span  class="img-grid__text--sub">Coming Soon</span>
+                      <!-- <span class="img-grid__text--main">Coming Soon</span>
+                      <span  class="img-grid__text--sub">Coming Soon</span> -->
                     </h3>
                   </div>
                 </div>
@@ -200,8 +200,8 @@
                       class="img-grid__image"
                     />
                     <h3 class="img-grid__text img-grid__text-3">
-                      <span class="img-grid__text--main">Coming Soon</span>
-                      <span class="img-grid__text--sub">Coming Soon</span>
+                      <!-- <span class="img-grid__text--main">Coming Soon</span>
+                      <span class="img-grid__text--sub">Coming Soon</span> -->
                     </h3>
                   </div>
                 </div>
@@ -210,7 +210,7 @@
           </div>
         </section>
 
-        <section id="schedule" class="schedule">
+        <!-- <section id="schedule" class="schedule">
           <div class="container">
             <div class="row u-margin-bottom-large">
               <div class="col-12">
@@ -218,9 +218,9 @@
               </div>
             </div>
 
-            <h1 class="heading-primary__coming-soon">Coming Soon..</h1>
+            <h1 class="heading-primary__coming-soon">Coming Soon..</h1> 
 
-            <!-- <div class="row">
+             <div class="row">
               <div class="col-6">
                 <h3 class="heading-tertiary u-margin-bottom-medium"># 01 Feb 21 &nbsp;&nbsp;|&nbsp;&nbsp; Day 1</h3>
                 <div class="scheduler">
@@ -295,9 +295,9 @@
                   </div>
                 </div>
               </div>
-            </div> -->
+            </div> 
           </div>
-        </section>
+        </section> -->
 
         <section id="rewind" class="rewind">
           <div class="container">
@@ -821,11 +821,11 @@
 
       <footer class="footer">
         <div class="footer__icons">
-          <a href="https://www.youtube.com/channel/UC_mRMYAOg4__QRBhZKJMLDQ"><img src="img/icons/youtube.svg" alt="" /></a>
-          <a href="https://www.instagram.com/ieee_mace_sb/"><img src="img/icons/insta.svg" alt="" /></a>
-          <a href="https://www.facebook.com/ieeemace/"><img src="img/icons/facebook.svg" alt="" /></a>
-          <a href="https://twitter.com/MaceSb"><img src="img/icons/twitter.svg" alt="" /></a>
-          <a href="https://www.linkedin.com/company/ieee-student-branch-mace/"><img src="img/icons/linkedin.png" alt="" /></a>
+          <a href="https://www.youtube.com/channel/UC_mRMYAOg4__QRBhZKJMLDQ" target="_blank"><img src="img/icons/youtube.svg" alt="" /></a>
+          <a href="https://www.instagram.com/ieee_mace_sb/" target="_blank"><img src="img/icons/insta.svg" alt="" /></a>
+          <a href="https://www.facebook.com/ieeemace/" target="_blank"><img src="img/icons/facebook.svg" alt="" /></a>
+          <a href="https://twitter.com/MaceSb" target="_blank"><img src="img/icons/twitter.svg" alt="" /></a>
+          <a href="https://www.linkedin.com/company/ieee-student-branch-mace/" target="_blank"><img src="img/icons/linkedin.png" alt="" /></a>
 
           <!-- <a href="#"><i class="fab fa-facebook-f"></i>
           <a href="#"><i class="fab "></i>
@@ -834,7 +834,7 @@
           <a href="#"><i class="fab "></i> -->
         </div>
         <p>
-          <span>Made in assosciation with <a  href="https://macehub.in/">macehub</a></span>
+          <span>Made in assosciation with <a  href="https://macehub.in/" target="_blank" style="color: #1bb35f;">macehub</a></span>
           <span>© All rights reserved - .hack ( ); 2021</span>
         </p>
       </footer>
