--- a/sponsor.html
+++ b/sponsor.html
@@ -57,7 +57,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
-    <title>Hack | Home</title>
+    <title>Hack | Why Sponsor Us</title>
   </head>
   <body>
     <!-- animation start -->
@@ -200,14 +200,14 @@
 
       <footer class="footer">
         <div class="footer__icons">
-          <a href="https://www.youtube.com/channel/UC_mRMYAOg4__QRBhZKJMLDQ"><img src="img/icons/youtube.svg" alt="" /></a>
-          <a href="https://www.instagram.com/ieee_mace_sb/"><img src="img/icons/insta.svg" alt="" /></a>
-          <a href="https://www.facebook.com/ieeemace/"><img src="img/icons/facebook.svg" alt="" /></a>
-          <a href="https://twitter.com/MaceSb"><img src="img/icons/twitter.svg" alt="" /></a>
-          <a href="https://www.linkedin.com/company/ieee-student-branch-mace/"><img src="img/icons/linkedin.png" alt="" /></a>
+          <a href="https://www.youtube.com/channel/UC_mRMYAOg4__QRBhZKJMLDQ" target="_blank"><img src="img/icons/youtube.svg" alt="" /></a>
+          <a href="https://www.instagram.com/ieee_mace_sb/" target="_blank"><img src="img/icons/insta.svg" alt="" /></a>
+          <a href="https://www.facebook.com/ieeemace/" target="_blank"><img src="img/icons/facebook.svg" alt="" /></a>
+          <a href="https://twitter.com/MaceSb" target="_blank"><img src="img/icons/twitter.svg" alt="" /></a>
+          <a href="https://www.linkedin.com/company/ieee-student-branch-mace/" target="_blank"><img src="img/icons/linkedin.png" alt="" /></a>
         </div>
         <p>
-          <span>Made in assosciation with <a  href="https://macehub.in/">macehub</a></span>
+          <span>Made in assosciation with <a  href="https://macehub.in/" style="color: #1bb35f;">macehub</a></span>
           <span>© All rights reserved - .hack ( ); 2021</span>
         </p>
       </footer>
