--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <li class="nav__item"><a href="#schedule">Schedule</a></li>
           <li class="nav__item"><a href="#rewind">After Video</a></li>
           <li class="nav__item"><a href="#testimonial">Testimonials</a></li>
-          <li class="nav__item nav__item--reg"><a href="#">Register</a></li>
+          <li class="nav__item nav__item--reg"><a href="/register.html">Register</a></li>
         </ul>
       </nav>
 
