--- a/register.html
+++ b/register.html
@@ -94,11 +94,11 @@
 
       <main>
 
-        <section id="why-table" class="why-table">
+        <section id="why-table" class="why-table notification">
           <div class="container">
             <div class="row">
               <div class="col-12 align-self-end">
-                <h1 class="heading-secondary">starting <span style="display: inline-block;">Soon..</span></h1>
+                <h1 class="heading-secondary">registration starting <span style="display: inline-block;">Soon..</span></h1>
               </div>
               <div class="col-12 get-notified">
                 <form class="get-notified__form d-flex">
